# nsfw-image-classifier

./: Dockerfile  README.md  datmo.json  requirements.txt  setup.cfg  setup.py  supervisord.conf
indexer/: __init__.py  celery_init.py  celeryconfig.py  config.yaml  download_models.sh  logger.py  tasks.py  visual.py
indexer/nsfw_model/: googlenet.prototxt  googlenet_mean.binaryproto  mean.binaryproto
tests/: test_tasks.py
