[metadata]
name = classifier_nsfw
version = 0.1
author = Shabaz Patel
author-email = shabaz@acusense.ai
summary = Indexer library for videos
description-file = README.md
home-page = http://acusense.ai
requires-python = >=2.6
Development Status :: 1 - Beta
Environment :: Console
Intended Audience :: Developers
Operating System :: OS Independent
Programming Language :: Python

[files]
packages =
    classifier_nsfw
    tests